responsive main logo on index page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <!-- /.container -->
     </nav>
-
+    <div class=""><img class="main-logo" src="img/korea-japan-logo.png"></div>
     <!-- Put your page content here! -->
 
     <!-- jQuery -->
