New changes to register html and css

--- a/register.html
+++ b/register.html
@@ -3,169 +3,176 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>About - NU World Cup 2016</title>
+  <title>About - NU World Cup 2016</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-grid.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap-grid.min.css" rel="stylesheet">
 
-    <!-- Favicon link -->
-    <link rel="icon" type="image/png" href="favicon.png">
+  <!-- Favicon link -->
+  <link rel="icon" type="image/png" href="favicon.png">
 
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- Custom CSS -->
-    <link href="css/nuworldcup.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/about.css">
+  <!-- Custom CSS -->
+  <link href="css/nuworldcup.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/about.css">
+  <link rel="stylesheet" type="text/css" href="register.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <![endif]-->
 
-</head>
+      </head>
 
-<body id="about">
+      <body id="about">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html"><img src="">NU World Cup</a>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html"><img src="">NU World Cup</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="about.html">About Us</a></li>
-<!--                    <li><a href="team.html">Team</a></li>-->
-                    <li><a href="gonzo.html">Gonzo Soccer</a></li>
-<!--                    <li><a href="info.html">Tournament Information</a></li>-->
-<!--                    <li><a href="sponsors.html">Sponsors</a></li>-->
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
+              <ul class="nav navbar-nav">
+                <li><a href="about.html">About Us</a></li>
+                <!--                    <li><a href="team.html">Team</a></li>-->
+                <li><a href="gonzo.html">Gonzo Soccer</a></li>
+                <!--                    <li><a href="info.html">Tournament Information</a></li>-->
+                <!--                    <li><a href="sponsors.html">Sponsors</a></li>-->
+                <li><a href="contact.html">Contact Us</a></li>
+              </ul>
             </div>
             <!-- /.navbar-collapse -->
+          </div>
+          <!-- /.container -->
+        </nav>
+
+
+        <div class="container">
+          <h1> NU World Cup Registration 2017 </h1>
+
+          <!-- Haven't touched the action on form yet -->
+          <form>
+
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-5", class="question">
+                  Northwestern World Cup (32 teams) or Women's World Cup?
+                </div>
+                    <div class="col-sm-3">
+                        <input type="radio" name="tournament" value="nuworldcup"> Northwestern World Cup</input>
+                    </div>
+                    <div class="col-sm-3">
+                        <input type="radio" name="tournament" value="womensworldcup"> Women's World Cup </input>
+                    </div>
+                </div>
+            </div>
+            <br>
+
+            <div class = "container">
+              <div class="row">
+                <div class="col-sm-5", class="question">
+                 Country Choice:
+               </div>
+               <div class="col-sm-2">
+                 <input type="text" name="countrychoice1" placeholder="First Choice">
+               </div>
+               <div class="col-sm-2">
+                 <input type="text" name="countrychoice2" placeholder="Second Choice"> 
+               </div>
+               <div class="col-sm-2">
+                 <input type="text" name="countrychoice3" placeholder="Third Choice"> 
+               </div>
+             </div>
+           </div>
+           <br>
+
+           <div class="container">
+             <div class="row">
+               <div class="col-sm-5", class="question">
+                Team Affiliation? 
+              </div>
+              <!-- If applicable (E.g. Fraternity/Sorority/Dorm etc.) -->
+              <div class="col-sm-6">
+                <input type="text" name="teamaffiliation" >
+              </div>
+            </div>
+          </div>
+          <br>
+
+          <p> Team Level* </p>
+          <input type="radio" name="level" value="advanced"> Advanced <br>
+          <input type="radio" name="level" value="intermediate"> Intermediate <br>
+          <input type="radio" name="level" value="beginner"> Beginner <br> 
+          <br>
+
+          <p> Would you be interested in purchasing a jersey through us?* </p>
+          <input type="radio" name="jersey" value="jerseyyes"> Yes <br>
+          <input type="radio" name="jersey" value="jerseyno"> No <br> 
+          <br>
+
+          <p> Captain's Name* </p>
+          <input type="text" name="captain" > <br>
+          <p> Captain's Email* </p>
+          <input type="text" name="captainemail" > <br>
+          <p> Captain's Phone Number </p>
+          <input type="text" name="captainphone" > <br>
+          <p> Has the captain ever been on the Northwestern Club Soccer Roster? </p>
+          <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes <br>
+          <input type="radio" name="clubsoccer" value="clubsoccerno"> No <br> 
+          <br>
+
+          <p> Player 2 Name* </p>
+          <input type="text" name="player2" > <br>
+          <p> Player 2 Email* </p>
+          <input type="text" name="player2" > <br>
+          <p> Has Player 2 ever been on the Northwestern Club Soccer Roster? </p>
+          <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes <br>
+          <input type="radio" name="clubsoccer" value="clubsoccerno"> No <br> 
+          <br>
+
+          ...
+
+          <p> Confirm that your team will raise $100 for Gonzo Soccer to empower young women through sports* </p>
+          <!-- Money must be raised by March 13th at 11:59pm. More details will be announced at Captain's Meeting. -->
+          <input type="radio" name="gonzo" value="gonzoyes"> Yes, I understand! <br>
+          <br>
         </div>
-        <!-- /.container -->
-    </nav>
-
-    <div class="container">
-       <h1> NU World Cup Registration 2017 </h1>
-
-<!-- Haven't touched the action on form yet -->
-<form>
-
-  <div class="container-fluid">
-      <div class="row">
-    <div 
-    class="col-md-6">Northwestern World Cup (32 teams) or Women's World Cup?
-    </div>
-          <div class="col-md-3">
-              <input type="radio" name="tournament" value="nuworldcup"> Northwestern World Cup</input>
-          </div>
-          <div class="col-md-3">
-              <input type="radio" name="tournament" value="womensworldcup"> Women's World Cup </input>
-          </div>
-      </div>
-    <br>
-
-    <div class="row">
-     <div class="col-md-5">
-     Country Choice:
-    </div>
-      <div class="col-md-2">
-    First Choice <input type="text" name="countrychoice1">
-      </div>
-      <div class="col-md-2">
-    Second Choice <input type="text" name="countrychoice2"> 
-      </div>
-      <div class="col-md-2">
-    Third Choice <input type="text" name="countrychoice3"> 
-      </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-5">
-    Team Affiliation? 
-    </div>
-    <!-- If applicable (E.g. Fraternity/Sorority/Dorm etc.) -->
-    <div class="col-md-7">
-      <input type="text" name="teamaffiliation" >
-    </div>
-  </div>
-  <br>
-
-  <p> Team Level* </p>
-  <input type="radio" name="level" value="advanced"> Advanced <br>
-  <input type="radio" name="level" value="intermediate"> Intermediate <br>
-  <input type="radio" name="level" value="beginner"> Beginner <br> 
-  <br>
-
-  <p> Would you be interested in purchasing a jersey through us?* </p>
-  <input type="radio" name="jersey" value="jerseyyes"> Yes <br>
-  <input type="radio" name="jersey" value="jerseyno"> No <br> 
-  <br>
-
-  <p> Captain's Name* </p>
-  <input type="text" name="captain" > <br>
-  <p> Captain's Email* </p>
-  <input type="text" name="captainemail" > <br>
-  <p> Captain's Phone Number </p>
-  <input type="text" name="captainphone" > <br>
-  <p> Has the captain ever been on the Northwestern Club Soccer Roster? </p>
-  <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes <br>
-  <input type="radio" name="clubsoccer" value="clubsoccerno"> No <br> 
-  <br>
-
-  <p> Player 2 Name* </p>
-  <input type="text" name="player2" > <br>
-  <p> Player 2 Email* </p>
-  <input type="text" name="player2" > <br>
-  <p> Has Player 2 ever been on the Northwestern Club Soccer Roster? </p>
-  <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes <br>
-  <input type="radio" name="clubsoccer" value="clubsoccerno"> No <br> 
-  <br>
-
-  ...
-
-  <p> Confirm that your team will raise $100 for Gonzo Soccer to empower young women through sports* </p>
-  <!-- Money must be raised by March 13th at 11:59pm. More details will be announced at Captain's Meeting. -->
-  <input type="radio" name="gonzo" value="gonzoyes"> Yes, I understand! <br>
-  <br>
-
-</div>
 
 
-</form> 
+      </form> 
     </div>
 
     <div class="container">    
-        <hr>
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; NU World Cup 2016. Built by <a href="http://twitter.com/YoniPinto/" target="_blank">Yoni Pinto</a> and <a href="http://github.com/jaiveerkothari/" target="_blank">Jaiveer Kothari</a>.</p>
-                </div>
-            </div>
-        </footer>
+      <hr>
+      <!-- Footer -->
+      <footer>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Copyright &copy; NU World Cup 2016. Built by <a href="http://twitter.com/YoniPinto/" target="_blank">Yoni Pinto</a> and <a href="http://github.com/jaiveerkothari/" target="_blank">Jaiveer Kothari</a>.</p>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <!-- jQuery -->
@@ -174,6 +181,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-</body>
+  </body>
 
-</html>
+  </html>
