--- a/register.html
+++ b/register.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
+  <script src="js/register.js"></script>
 
   <title>About - NU World Cup 2016</title>
 
@@ -19,7 +20,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Custom Fonts -->
-  <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+  <!-- <link rel="stylesheet" type="text/css" href="fonts/fonts.css"> -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
   <!-- Custom CSS -->
@@ -119,46 +120,81 @@
             </div>
           </div>
           <br>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-5">
+                Would you be interested in purchasing a jersey through us?* 
+              </div>
+              <div class="col-sm-3">
+                <input type="radio" name="jersey" value="jerseyyes"> Yes </input>
+              </div>
+              <div class="col-sm-3">
+                <input type="radio" name="jersey" value="jerseyno"> No </input>
+              </div>
+            </div>
+          </div>
 
-          <p> Team Level* </p>
-          <input type="radio" name="level" value="advanced"> Advanced <br>
-          <input type="radio" name="level" value="intermediate"> Intermediate <br>
-          <input type="radio" name="level" value="beginner"> Beginner <br> 
           <br>
-
-          <p> Would you be interested in purchasing a jersey through us?* </p>
-          <input type="radio" name="jersey" value="jerseyyes"> Yes <br>
-          <input type="radio" name="jersey" value="jerseyno"> No <br> 
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-3">
+                Captain's Name* 
+                <input type="text" name="captain" > 
+              </div>
+              <div class="col-sm-3">
+                Captain's Email* 
+                <input type="text" name="captainemail" > 
+              </div>
+              <div class="col-sm-3">
+                Captain's Phone Number 
+                <input type="text" name="captainphone" > 
+              </div>
+              <div class="col-sm-2">
+                Has the captain ever been on the Northwestern Club Soccer Roster? <br>
+                <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes 
+                <input type="radio" name="clubsoccer" value="clubsoccerno"> No 
+              </div>
+            </div>
+          </div>
+          <p>Players</p>
+          <hr>
+        <table id="players">
+          <!-- <th> Players </th> <br> -->
+          <div class='container'>
+            <div class="row">
+              <div class="col-sm-3">
+                Player 1 Name*<br/>
+                <input type="text" name="player1" > 
+              </div>
+              <div class="col-sm-3">
+                Player 1 Email* <br/>
+                <input type="text" name="player1" > 
+              </div>
+              <div class="col-sm-3">
+                Has Player 1 ever been on the Northwestern Club Soccer Roster?<br/>
+                <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes
+                <input type="radio" name="clubsoccer" value="clubsoccerno"> No  
+              </div>
+            </div>
+          </div>
+        </table>
           <br>
-
-          <p> Captain's Name* </p>
-          <input type="text" name="captain" > <br>
-          <p> Captain's Email* </p>
-          <input type="text" name="captainemail" > <br>
-          <p> Captain's Phone Number </p>
-          <input type="text" name="captainphone" > <br>
-          <p> Has the captain ever been on the Northwestern Club Soccer Roster? </p>
-          <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes <br>
-          <input type="radio" name="clubsoccer" value="clubsoccerno"> No <br> 
+          <button type="button"id="add_player" style="float:right">Add Player</button>
           <br>
-
-          <p> Player 2 Name* </p>
-          <input type="text" name="player2" > <br>
-          <p> Player 2 Email* </p>
-          <input type="text" name="player2" > <br>
-          <p> Has Player 2 ever been on the Northwestern Club Soccer Roster? </p>
-          <input type="radio" name="clubsoccer" value="clubsocceryes"> Yes <br>
-          <input type="radio" name="clubsoccer" value="clubsoccerno"> No <br> 
           <br>
-
-          ...
-
+          <hr>
           <p> Confirm that your team will raise $100 for Gonzo Soccer to empower young women through sports* </p>
           <!-- Money must be raised by March 13th at 11:59pm. More details will be announced at Captain's Meeting. -->
           <input type="radio" name="gonzo" value="gonzoyes"> Yes, I understand! <br>
           <br>
         </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <input type="submit"/>
+          </div>
+        </div>
+      </div>
 
       </form> 
     </div>
