fixed the team affiliation textbook

--- a/register.html
+++ b/register.html
@@ -115,7 +115,7 @@
               </div>
               <!-- If applicable (E.g. Fraternity/Sorority/Dorm etc.) -->
               <div class="col-sm-6">
-                <input type="text" name="teamaffiliation" >
+                <input type="text" name="teamaffiliation" placeholder="E.g. Fraternity/Sorority/Dorm etc." id="teamaffiliationbox" style="width: 64%">
               </div>
             </div>
           </div>
