home page video, responsive, starting faq page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         <!-- /.container -->
     </nav>
     <div class=""><img class="main-logo" src="img/korea-japan-logo.png"></div>
+    
+    <div class=vid-container>
+        <h1>Take a peek at last year...</h1>
+        <iframe src="https://player.vimeo.com/video/165632714" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    
     <!-- Put your page content here! -->
 
     <!-- jQuery -->
