--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li><a href="register.html">Register</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
                     <li><a href="gonzo.html">Gonzo Soccer</a></li>
