--- a/faq.html
+++ b/faq.html
@@ -22,9 +22,8 @@
     <link href="css/nuworldcup.css" rel="stylesheet">
 
 </head>
-
-<body>
     
+<body>
     <!-- Navigation -->
     <nav class="navbar navbar-home navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -42,9 +41,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li><a href="register.html">Register</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="about.html">About Us</a></li>
 <!--                    <li><a href="team.html">Team</a></li>-->
                     <li><a href="gonzo.html">Gonzo Soccer</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
 <!--                    <li><a href="info.html">Tournament Information</a></li>-->
 <!--                    <li><a href="sponsors.html">Sponsors</a></li>-->
                     <li><a href="contact.html">Contact Us</a></li>
@@ -55,7 +57,11 @@
         <!-- /.container -->
     </nav>
 <div class="container">
-    <br />
+    <br>
+        <div class="row">
+            <img class="col-xs-5 col-md-3 col-md-offset-45" src="img/titles/faq-title.png">
+        </div>
+    <br>
 
 
     <div class="panel-group" id="accordion">
@@ -68,151 +74,165 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    Registration is  <strong>Monday, February 13th</strong> at <strong>12 pm</strong>. Registration will not close until.
+                    Registration is  <strong>Monday, February 13th</strong> at <strong>12 pm</strong>.
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">What happens if team registration fills up before I register?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">How many players can I register?</a>
                 </h4>
             </div>
-            <div id="collapseTen" class="panel-collapse collapse">
+            <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Your team will be added to the waitlist. Get to registration quick, it fills up fast! Teams do get off the waitlist though.
+                    The minimum number of players is <strong>10</strong> and max is <strong>16</strong>.
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">If I don't have a team can I still register for the tournament?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">What information do I need to register?</a>
                 </h4>
             </div>
-            <div id="collapseEleven" class="panel-collapse collapse">
+            <div id="collapseThree" class="panel-collapse collapse">
+                <div class="panel-body">
+                    If you are the team captain, you will need the names and <strong>emails</strong> of the 10 to 16 players that you plan on registering, 3 possible <strong>country names</strong> you would like your team to be called, and whether you would like NU World Cup to <strong>order jerseys</strong> for you.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">What happens if team registration fills up before I register?</a>
+                </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Your team will be added to the waitlist. Get to registration quick, it fills up fast!
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">If I don't have a team can I still register for the tournament?</a>
+                </h4>
+            </div>
+            <div id="collapseFive" class="panel-collapse collapse">
                 <div class="panel-body">
                     No worries! There is <strong>individual player registration</strong> for both the Co-Ed and Women's tournaments! That means that teams that are in need of more players will be calling on you to join them. You can find the registration form for individual registration in the same place as for teams. Check out the <a href="./register.html">register</a> tab.
                 </div>
             </div>
         </div>
 
-        <div class="faqHeader">Sellers</div>
+        <div class="faqHeader">Game Play</div>
+        
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Who cen sell items?</a>
-                </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse">
-                <div class="panel-body">
-                    Any registed user, who presents a work, which is genuine and appealing, can post it on <strong>PrepBootstrap</strong>.
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">I want to sell my items - what are the steps?</a>
-                </h4>
-            </div>
-            <div id="collapseThree" class="panel-collapse collapse">
-                <div class="panel-body">
-                    The steps involved in this process are really simple. All you need to do is:
-                    <ul>
-                        <li>Register an account</li>
-                        <li>Activate your account</li>
-                        <li>Go to the <strong>Themes</strong> section and upload your theme</li>
-                        <li>The next step is the approval step, which usually takes about 72 hours.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">How much do I get from each sale?</a>
-                </h4>
-            </div>
-            <div id="collapseFive" class="panel-collapse collapse">
-                <div class="panel-body">
-                    Here, at <strong>PrepBootstrap</strong>, we offer a great, 70% rate for each seller, regardless of any restrictions, such as volume, date of entry, etc.
-                    <br />
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Why sell my items here?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">How many players can be on the field at once?</a>
                 </h4>
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
                 <div class="panel-body">
-                    There are a number of reasons why you should join us:
-                    <ul>
-                        <li>A great 70% flat rate for your items.</li>
-                        <li>Fast response/approval times. Many sites take weeks to process a theme or template. And if it gets rejected, there is another iteration. We have aliminated this, and made the process very fast. It only takes up to 72 hours for a template/theme to get reviewed.</li>
-                        <li>We are not an exclusive marketplace. This means that you can sell your items on <strong>PrepBootstrap</strong>, as well as on any other marketplate, and thus increase your earning potential.</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">What are the payment options?</a>
-                </h4>
-            </div>
-            <div id="collapseEight" class="panel-collapse collapse">
-                <div class="panel-body">
-                    The best way to transfer funds is via Paypal. This secure platform ensures timely payments and a secure environment. 
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">When do I get paid?</a>
-                </h4>
-            </div>
-            <div id="collapseNine" class="panel-collapse collapse">
-                <div class="panel-body">
-                    Our standard payment plan provides for monthly payments. At the end of each month, all accumulated funds are transfered to your account. 
-                    The minimum amount of your balance should be at least 70 USD. 
+                    The games are run 7 on 7. If you have less than 5 players than you forfeith the match.
                 </div>
             </div>
         </div>
 
-        <div class="faqHeader">Buyers</div>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">I want to buy a theme - what are the steps?</a>
-                </h4>
-            </div>
-            <div id="collapseFour" class="panel-collapse collapse">
-                <div class="panel-body">
-                    Buying a theme on <strong>PrepBootstrap</strong> is really simple. Each theme has a live preview. 
-                    Once you have selected a theme or template, which is to your liking, you can quickly and securely pay via Paypal.
-                    <br />
-                    Once the transaction is complete, you gain full access to the purchased product. 
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Is this the latest version of an item</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">How many club players can play?</a>
                 </h4>
             </div>
             <div id="collapseSeven" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Each item in <strong>PrepBootstrap</strong> is maintained to its latest version. This ensures its smooth operation.
+                    In the Co-Ed tournament there is a max of 2 (PAST or PRESENT) club players allowed on a team roster. For the Women's tournament there is a max of 3 club players allowed.
                 </div>
             </div>
         </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Can a player player in the Co-Ed and Women's tournament?</a>
+                </h4>
+            </div>
+            <div id="collapseEight" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Yes! That's allowed, but if both your teams are playing at the same time you will have to choose to play for only one.
+                </div>
+            </div>
+        </div>
+
+        <div class="faqHeader">General</div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">How much does it cost to play?</a>
+                </h4>
+            </div>
+            <div id="collapseNine" class="panel-collapse collapse">
+                <div class="panel-body">
+                    For the Co-ed tournament each player pays $10 and for the Women's each player pays $5. Each team is asked to raise $100 for Gonzo Soccer as well. Check out <a href=gonzo.html>Gonzo</a> to learn more about the program we are donating to!
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Where and when is the tournament?</a>
+                </h4>
+            </div>
+            <div id="collapseTen" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Both tournament will be 2 days on the fields by the Lakeside. The final date is still to be decided. Traditionally, the tournament has been in the last two weeks of April or first two weeks of May.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">What is the tournament structure?</a>
+                </h4>
+            </div>
+            <div id="collapseEleven" class="panel-collapse collapse">
+                <div class="panel-body">
+                    The Co-Ed tournament will be 32 teams divided to 8 groups. There will be group stages and then elimination bracket, just like FIFA World Cup. The Women's tournament structure is still to be decided.
+                </div>
+            </div>
+        </div>
+<!--
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">What do I get when I win?</a>
+                </h4>
+            </div>
+            <div id="collapseEleven" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Happiness and knowing you're better than everyone else.
+                </div>
+            </div>
+        </div>
+-->
     </div>
+    <div class="container">    
+        <hr>
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; NU World Cup 2017</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+
 </div>
 
 <style>
@@ -244,6 +264,11 @@
         -o-transform: rotate(90deg);
         transform: rotate(90deg);
         color: #454444;
+    }
+    @media (min-width: 992px) {
+        .col-md-offset-45 {
+        margin-left: 37.1666667%;
+        }
     }
 </style>
 
