fixing typos to faq page

--- a/faq.html
+++ b/faq.html
@@ -98,7 +98,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                    If you are the team captain, you will need the names and <strong>emails</strong> of the 10 to 16 players that you plan on registering, 3 possible <strong>country names</strong> you would like your team to be called, and whether you would like NU World Cup to <strong>order jerseys</strong> for you.
+                    If you are the team captain, you will need the names and <strong>emails</strong> of the 10 to 16 players that you plan on registering and 3 possible <strong>country names</strong> you would like your team to be called.
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
                 <div class="panel-body">
-                    The games are run 7 on 7. If you have less than 5 players than you forfeith the match.
+                    The games are run 7 on 7. If you have less than 5 players than you forfeit the match.
                 </div>
             </div>
         </div>
@@ -159,7 +159,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Can a player player in the Co-Ed and Women's tournament?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Can a player play in the Co-Ed and Women's tournament?</a>
                 </h4>
             </div>
             <div id="collapseEight" class="panel-collapse collapse">
