added prodigy finance sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -100,6 +100,15 @@
             </div>
             <div class="col-md-3"></div>
         </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 img-portfolio">
+                <a target="_blank" href="http://prodigyfinance.com/">
+                    <img class="img-responsive img-hover" src="img/sponsors/2017/ProdigyLogo_Lockup_white.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
     </div>
         
 
