changing back before 12:00

--- a/faq.html
+++ b/faq.html
@@ -67,7 +67,7 @@
 
 
     <div class="panel-group" id="accordion">
-        <div class="faqHeader">Map.</div>
+        <div class="faqHeader">Map</div>
         <div style="text-align:center;"><img src="../img/fields.PNG"></div>
         <div class="faqHeader">Registration</div>
         <div class="panel panel-default">
